--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"i18next": "^23.7.7",
 		"next": "14.0.3",
+		"next-i18next": "^15.0.0",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"react-i18next": "^13.5.0"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
