--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "relax",
 	"version": "0.1.0",
 	"private": true,
+	"license": "MIT",
 	"scripts": {
 		"start": "next dev",
 		"build": "next build",
