--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"formik": "^2.4.5",
 		"next": "14.0.3",
 		"next-international": "^1.1.4",
 		"react": "^18",
-		"react-dom": "^18"
+		"react-dom": "^18",
+		"yup": "^1.3.2"
 	},
 	"devDependencies": {
 		"@svgr/webpack": "^8.1.0",
