--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@vercel/speed-insights": "^1.0.2",
 		"formik": "^2.4.5",
 		"next": "14.0.3",
 		"next-international": "^1.1.4",
