--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"@vercel/speed-insights": "^1.0.2",
 		"formik": "^2.4.5",
-		"next": "14.0.3",
+		"next": "^14.0.4",
 		"next-international": "^1.1.4",
 		"react": "^18",
 		"react-dom": "^18",
